# iona-protocol

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE.md  LICENSE  PUBLISHING_SECURITY_NOTES.md  README.md  SECURITY.md  SECURITY_POSTURE.md  SUPPORTED_NETWORKS.md  UPGRADE.md  build.rs  config.toml  deny.toml  iona.cdx.json  rbac.toml  sbom.cdx.json.json
.cargo/: config.toml
.github/workflows/: attestation.yml  ci.yml  deno.yml  docker-image.yml  grant-tests.yml  release.yml  security.yml  slsa.yml  slsa_provenance.yml  upgrade-compat.yml
adapters/cosmos/: README.md  convert_config.sh  key_import.sh  migrate_validator.md
api/: openapi.yaml
benches/: core_benchmarks.rs
config/: example.toml  ultra.toml
deploy/configs/: genesis.json  rpc.toml  val1.toml  val2.toml  val3.toml  val4.toml
deploy/validator/envoy/: envoy.yaml
deploy/validator/firewall/: iptables-rules.sh  ufw-setup.sh
deploy/validator/nginx/: iona-admin.conf  iona-rpc.conf
deploy/validator/systemd/: iona-node.service  iona-node@.service
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  CERT_ROTATION.md  IONA_TECHNICAL_OVERVIEW.md  REPRODUCIBILITY.md  ROADMAP.md  SECURITY_FIRST.md  TECHNICAL_OVERVIEW.md  TESTNET.md  TESTNET_READINESS.md  VALIDATOR_KEYS.md  VERIFY_RELEASE.md  roadmap.md  security.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: p2p_frame_decode.rs  rpc_json.rs  tx_json.rs  vm_bytecode.rs
ops/: monitoring-quickstart.md
ops/alerts/: prometheus_rules.yml
ops/grafana/: iona_validator_dashboard.json
ops/playbooks/: INCIDENT_RESPONSE_PLAYBOOK.md  POSTMORTEM_TEMPLATE.md  SUPPORT_BUNDLE_SCHEMA.md
ops/runbooks/: audit_chain_break.md  consensus_no_progress.md  disk_wal_growth.md  finality_lag.md  mempool_pressure.md  peer_drop.md  rpc_latency.md  tls_cert_expiry.md  upgrade_lag.md  validator_double_sign.md
ops/slo/: slo_config.yml
packaging/apt-repo/: README.md  setup-apt-repo.sh
packaging/deb/: README.md  build-deb.sh  control  postinst  prerm  rules
packaging/deb-split/iona-cli/: control
packaging/deb-split/iona-node/: control
packaging/deb-split/iona-node/lib/systemd/system/: iona-node.service
packaging/deb-split/iona-signer/: control
releases/: README.md  SHA256SUMS.template
scripts/: install.sh  run_3nodes_local.sh  upgrade.sh
scripts/chaos/: clear_netem.sh
scripts/release/: build-deb.sh
scripts/testnet/: rolling_upgrade_sim.sh  send_test_tx.sh
sdk/typescript/: tsconfig.json
src/: admin.rs  audit.rs  config.rs  evidence.rs  execution.rs  governance.rs  lib.rs  merkle.rs  metrics.rs  rpc_health.rs  rpc_limits.rs  slashing.rs  snapshot.rs  wal.rs
src/config/: validation.rs
src/consensus/: block_producer.rs  debug_trace.rs  diagnostic.rs  double_sign.rs  engine.rs  fast_finality.rs  genesis.rs  messages.rs  mod.rs  quorum.rs  quorum_diag.rs  validator_set.rs
src/crypto/: ed25519.rs  hsm.rs  keystore.rs  mod.rs  remote_signer.rs  tx.rs
src/economics/: governance.rs  mod.rs  params.rs  rewards.rs  staking.rs  staking_tx.rs
src/evm/: db.rs  executor.rs  executor_env.rs  kv_state_db.rs  mod.rs  types.rs
src/execution/: parallel.rs  sandbox.rs  vm_executor.rs
src/mempool/: mev_resistant.rs  mod.rs  pool.rs
src/net/: eclipse_profiles.rs  inmem.rs  p2p.rs  peer_score.rs  peerstore.rs  simnet.rs  state_sync.rs
src/protocol/: activation_guarantees.rs  compat.rs  dual_validate.rs  mod.rs  rolling.rs  safety.rs  state_invariants.rs  transitions.rs  upgrade_constraints.rs  version.rs  wire.rs
src/replay/: divergence.rs  historical.rs  mod.rs  nondeterminism.rs  replay_tool.rs  state_root_verify.rs
src/rpc/: admin_auth.rs  auth_api_key.rs  basefee.rs  block_store.rs  bloom.rs  cert_reload.rs  chain_store.rs  eth_header.rs  eth_rlp.rs  eth_rpc.rs  fs_store.rs  middleware.rs  mod.rs  mpt.rs  proofs.rs  rbac.rs  rlp_encode.rs  router.rs  state_trie.rs  tx_decode.rs  txpool.rs  withdrawals.rs
src/storage/: block_store.rs  evidence_store.rs  layout.rs  meta.rs  mod.rs  peer_store.rs  receipts_store.rs  schema_monotonicity.rs  snapshots.rs
src/storage/migrations/: background.rs  m0004_protocol_version.rs  m0005_add_tx_index.rs  mod.rs
src/types/: mod.rs  tx_evm.rs  tx_vm.rs
src/upgrade/: mod.rs
src/upgrade/migrations/: mod.rs
src/vm/: bytecode.rs  errors.rs  gas.rs  interpreter.rs  state.rs
testnet/: README.md  docker-compose.yml  setup.sh
testnet/configs/: genesis.json  validator-1.toml  validator-2.toml  validator-3.toml  validator-4.toml
testnet/local4/: genesis.json  run_testnet.sh
testnet/local4/node1/: config.toml
testnet/local4/node2/: config.toml
testnet/local4/node3/: config.toml
testnet/local4/node4/: config.toml
testnet/prometheus/: prometheus.yml
tests/: admin_rbac.rs  consensus_adversarial.rs  determinism.rs  inmem_p2p_flow.rs  integration.rs  invariants_placeholder.rs  pos_rewards.rs  proptests.rs  replay.rs  rpc_hardening.rs  rpc_security_gates.rs  schema_migration.rs  security_regression.rs  simnet.rs  simnet_block_request_flow.rs  simnet_five_node_eventual.rs  simnet_late_joiner.rs  simnet_partition_heal_safety.rs  simple_producer_integration.rs  two_node_proposal_flow.rs  upgrade_rolling.rs  upgrade_sim.rs  vm_integration.rs
