[package]
name = "iona"
version = "28.1.0"
edition = "2021"
license = "Apache-2.0"
autobins = false

[features]
default = []

otel = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:tracing-opentelemetry"
]

bin-cli = []
bin-chaos = []
bin-remote-signer = []
bin-evm-rpc = []
bin-chaindb-tool = []
bin-block-store = []

hsm = []
metrics = []
prometheus = []
evm_hash = []
state_trie = []

pkcs11 = ["hsm", "dep:cryptoki"]
aws = ["hsm", "dep:aws-config", "dep:aws-sdk-kms"]
azure = ["hsm", "dep:azure_identity", "dep:azure_security_keyvault"]
gcp = ["hsm", "dep:google-cloud-kms"]

[dependencies]
reference-trie = "0.29"
rlp-derive = "0.1"
atty = "0.2"
fd-lock = "4"
memory-db = "0.32"
trie-db = "0.28"
hash-db = "0.16"
keccak-hasher = "0.16"
triehash = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rlp = { version = "0.5", features = ["derive"] }

revm = { version = "9", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
thiserror = "1"
rand = "0.8"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower_governor = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "limit", "trace"] }
tower = { version = "0.4", features = ["util"] }
http = "1"
hyper = "1"

axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
zeroize = "1"

zstd = "0.13"

libp2p = { version = "0.54", features = [
  "tokio",
  "tcp",
  "dns",
  "noise",
  "yamux",
  "gossipsub",
  "mdns",
  "identify",
  "request-response",
  "kad",
  "macros"
] }

bytes = "1"
bincode = "1"
anyhow = "1"
futures = "0.3"
hex = "0.4"
hex-literal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
serde_with = "3"
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["process"] }
lru = "0.12"
governor = "0.6"
nonzero_ext = "0.3"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
rayon = "1.8"

opentelemetry = { version = "0.24", optional = true }
opentelemetry-otlp = { version = "0.17", optional = true, features = ["tonic"] }
tracing-opentelemetry = { version = "0.25", optional = true }

cryptoki = { version = "0.8", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
azure_identity = { version = "0.21", optional = true }
azure_security_keyvault = { version = "0.21", optional = true }
google-cloud-kms = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
ureq = { version = "2", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
httpmock = "0.7"

[[bench]]
name = "core_benchmarks"
harness = false

[[bin]]
name = "iona-node"
path = "src/bin/iona-node.rs"

[[bin]]
name = "iona-cli"
path = "src/bin/iona-cli.rs"
required-features = ["bin-cli"]

[[bin]]
name = "iona-chaos"
path = "src/bin/iona-chaos.rs"
required-features = ["bin-chaos"]

[[bin]]
name = "iona-remote-signer"
path = "src/bin/iona-remote-signer.rs"
required-features = ["bin-remote-signer"]

[[bin]]
name = "iona-evm-rpc"
path = "src/bin/iona-evm-rpc.rs"
required-features = ["bin-evm-rpc"]

[[bin]]
name = "iona-chaindb-tool"
path = "src/bin/iona-chaindb-tool.rs"
required-features = ["bin-chaindb-tool"]

[[bin]]
name = "block_store"
path = "src/bin/block_store.rs"
required-features = ["bin-block-store"]

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
overflow-checks = true

[profile.test]
overflow-checks = true

[build-dependencies]