[package]
name = "iona-fuzz"
version = "0.0.1"
publish = false      # Prevents accidental publication to crates.io
edition = "2021"     # Rust 2021 edition
description = "Fuzzing targets for the Iona blockchain node"
authors = ["Your Name <your.email@example.com>"]   # Add if needed
license = "MIT OR Apache-2.0"                      # Adjust as appropriate

[package.metadata]
cargo-fuzz = true    # Required for cargo-fuzz integration

# Profile settings for faster and more debuggable fuzzing builds
[profile.fuzz]
inherits = "release"   # Start from release profile
debug = 1              # Preserve line numbers in backtraces
lto = false            # Disable link-time optimization for faster compile
opt-level = 3          # Keep maximum runtime optimizations

[dependencies]
# Core fuzzing framework
libfuzzer-sys = "0.4.8"                # Latest as of writing
# Support for generating arbitrary structured data
arbitrary = { version = "1.3.2", features = ["derive"] }
# Iona node library (local path dependency)
iona = { path = ".." }
# Serialization/deserialization for fuzzing inputs
bincode = "1.3.3"
serde_json = "1.0.128"                  # For JSON fuzzing targets

# Fuzz targets - each one is a separate binary that cargo-fuzz will run
[[bin]]
name = "consensus_msg"
path = "fuzz_targets/consensus_msg.rs"

[[bin]]
name = "tx_json"
path = "fuzz_targets/tx_json.rs"

[[bin]]
name = "p2p_frame_decode"
path = "fuzz_targets/p2p_frame_decode.rs"

[[bin]]
name = "vm_bytecode"
path = "fuzz_targets/vm_bytecode.rs"

[[bin]]
name = "block_header"
path = "fuzz_targets/block_header.rs"

[[bin]]
name = "rpc_json"
path = "fuzz_targets/rpc_json.rs"

[[bin]]
name = "state_transition"
path = "fuzz_targets/state_transition.rs"
